appId: com.estephano.gobernaterritory02
---
- launchApp:
    clearState: false
- tapOn:
    id: "tab-profile"
- assertVisible: "Perfil"
- tapOn:
    text: "Eliminar cuenta"
- assertVisible: "Eliminar mi cuenta"
- tapOn:
    text: "Eliminar mi cuenta"
- assertVisible: "Ingresá tu número"
